[tool.poetry]
name = "hydra-filter-sweeper"
version = "1.0.0"
description = "A Hydra plugin to extend the basic sweeper with customizable filters."
authors = [
    "Simon Rampp <simon.rampp@tum.de>",
    "Andreas Triantafyllopoulos <andreas.triantafyllopoulos@tum.de>",
    "Manuel Milling <manuel.milling@tum.de>",
    "Björn W. Schuller <schuller@tum.de>",
]
readme = "README.md"
license = "MIT"
keywords = ["hydra", "plugin", "sweeper", "filter"]
packages = [
    { include = "hydra_filter_sweeper" },
    { include = "filter.py", from = "hydra_plugins" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"
evalidate = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
codespell = "^2.2.6"
ruff = "^0.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E9", "F63", "F7", "F82", "Q0", "N801", "I"]
ignore = ["E741"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"
filterwarnings = [
    "error",
    "ignore:.*Future Hydra versions will no longer change working directory at job runtime by default.*:UserWarning",
    "ignore:.*Proactor event loop does not implement add_reader family of methods required for zmq.*:RuntimeWarning",
    "ignore:.*pkg_resources is deprecated*",
]
